# full-stack-poker-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml
FastAPI/: calculations.py  database.py  main.py  models.py  poker.db  requirements.txt
React/: Dockerfile  package-lock.json  package.json
React/public/: index.html
React/src/: Api.js  App.css  App.js  App.tsx  index.js  types.ts  utils.ts
React/src/api/: Api.ts  ApiUtils.ts
React/src/components/: Appbar.tsx  Balance.js  Balance.tsx  BalanceTable.tsx  Calculator.js  CalculatorNumbers.js  ExitedPlayers.tsx  GameForm.js  GameForm.tsx  GameName.js  GameName.tsx  Home.tsx  Live.tsx  LivePlayer.tsx  LivePlayerLine.tsx  LivePlayers.tsx  PlayerBalance.js  PlayerBalance.tsx  PlayerLine.js  PlayerLine.tsx  PlayerStartInput.tsx  PokerForm.js  PokerIcon.tsx  Root.tsx  SettleBalanceModal.js  SettleBalanceModal.tsx  SumBalance.tsx  TotalBalance.js  TotalBalance.tsx
React/src/old/: CalculatorNumbers.js
homegame/: Dockerfile  Pipfile  calculations.py  main.py  models.py  poker.db  pyproject.toml  requirements.txt
homegame/db/: core.py  games.py  live_games.py  played_games.py  players.py
homegame/routers/: games.py  live_games.py  played_games.py  players.py  router.py
